--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/6c79431bf8.js" crossorigin="anonymous"></script>
     <!--fontawesome.com/icons 에서 아이콘을 import 해준다.-->
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings | Kakao Clone</title>
 </head>
 
