--- a/friends.html
+++ b/friends.html
@@ -30,10 +30,10 @@
     </div>
 
     <headers class="header">
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <h1 class="header__title">Friends</h1>
         </div>
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
