--- a/chat.html
+++ b/chat.html
@@ -30,14 +30,14 @@
     </div>
 
     <headers class="header">
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Best Friend</h1>
             <!--대화상대 명-->
         </div>
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <span class="header__icon">
                 <i class="fas fa-search"></i>
                 <!--search 버튼-->
