--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
     </div>
 
-    <headers class="header">
-        <div class="class header__header-column">
+    <header class="header">
+        <div class="header__header-column">
             <h1 class="header__title">Chats</h1>
         </div>
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
@@ -43,7 +43,7 @@
                 <i class="fas fa-cog"></i>
             </span>
         </div>
-    </headers>
+    </header>
     <main class="chats">
         <!--상태바, 헤더, 네비게이션바를 제외한 main contents-->
         <ul class="chats__list">
