--- a/more.html
+++ b/more.html
@@ -28,10 +28,10 @@
     </div>
 
     <headers class="header">
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <h1 class="header__title">More</h1>
         </div>
-        <div class="class header__header-column">
+        <div class="header__header-column">
 
             <span class="header__icon">
                 <i class="fas fa-search"></i>
