--- a/settings.html
+++ b/settings.html
@@ -30,13 +30,13 @@
     </div>
 
     <headers class="header">
-        <div class="class header__header-column">
+        <div class="header__header-column">
             <a href="more.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Settings</h1>
         </div>
-        <div class="class header__header-column">
+        <div class="header__header-column">
 
             <span class="header__icon">
                 <i class="fas fa-search"></i>
