#2.7 Friend Component part 2

--- a/friends.html
+++ b/friends.html
@@ -1,4 +1,4 @@
-<!--friends.html-->>
+<!--friends.html-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -64,7 +64,7 @@
             <h5 class="friends__title">Plus Friend</h5>
             <div class="friends__friend friend ">
                 <div class="friend__column">
-                    <img class="g-avatar friend__avatar" src="images/avatar.jpg" alt="" />
+                    <img class="friend__avatar" src="images/avatar.jpg" alt="" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -78,7 +78,7 @@
             <h5 class="firends__title">Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
-                    <img class="g-avatar friend__avatar" src="images/avatar.jpg" alt="" />
+                    <img class="friend__avatar" src="images/avatar.jpg" alt="" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Nicolas Serrano
