--- a/find.html
+++ b/find.html
@@ -91,7 +91,7 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <img class="g-avatar friend__avatar" src="images/avatar.jpg" alt="" />
+                    <img class="friend__avatar" src="images/avatar.jpg" alt="" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Nicolas Serrano
