--- a/index.html
+++ b/index.html
@@ -44,25 +44,28 @@
             </span>
         </div>
     </header>
+    <!--상태바, 헤더, 네비게이션바를 제외한 main contents-->
     <main class="chats">
-        <!--상태바, 헤더, 네비게이션바를 제외한 main contents-->
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <!--chats__list-item-->
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                <!--item-username-->
-                                Lynn
-                            </span>
-                            <span class="chat__preview">Going home!</span>
-                            <!--item-message-->
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yestersay</span>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                March 8
+                            </span>
+                        </div>
                     </div>
                 </a>
             </li>
