--- a/friends.html
+++ b/friends.html
@@ -45,7 +45,7 @@
 
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img class="g-avatar friend__avatar" src="images/avatar.jpg" alt="" />
                     <div class="friend__content">
@@ -74,8 +74,8 @@
             </div>
         </div>
 
-        <ul class="firends__list">
-            <h5 class="firends__title">Friends 14</h5>
+        <ul class="friends__list">
+            <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
                     <img class="friend__avatar" src="images/avatar.jpg" alt="" />
@@ -92,8 +92,8 @@
                     <div class="friend__now-listening">
                         <span>
                             FTISLAND (FT NomadCoders)
+                            <i class="fas fa-play"></i>
                         </span>
-                        <i class="fas fa-play"></i>
                     </div>
                 </div>
             </li>
