--- a/more.html
+++ b/more.html
@@ -78,7 +78,7 @@
                         Emoticons
                     </span>
                 </li>
-                <li>
+                <li class="more__btn">
                     <span class="more__btn-icon">
                         <i class="fas fa-brush fa-2x"></i>
                     </span>
@@ -86,7 +86,7 @@
                         Themes
                     </span>
                 </li>
-                <li>
+                <li class="more__btn">
                     <span class="more__btn-icon">
                         <i class="fab fa-kickstarter-k fa-2x"></i>
                     </span>
@@ -96,30 +96,30 @@
                 </li>
             </ul>
         </header>
-        <section classs="more__suggestions">
+        <section class="more__suggestions">
             <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
-                <li class="more__suggestions suggestion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-quote-right fa-2x"></i>
+                        <i class="fas fa-quote-right"></i>
                     </span>
-                    <span class="suggestion__titile">
+                    <span class="suggestion__title">
                         Kakao Story
                     </span>
                 </li>
-                <li class="more__suggestions suggestion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-beer fa-2x"></i>
+                        <i class="fas fa-beer"></i>
                     </span>
-                    <span class="suggestion__titile">
+                    <span class="suggestion__title">
                         Kakao Friends
                     </span>
                 </li>
-                <li class="more__suggestions suggestion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-gamepad fa-2x"></i>
+                        <i class="fas fa-gamepad"></i>
                     </span>
-                    <span class="suggestion__titile">
+                    <span class="suggestion__title">
                         Friends Gem
                     </span>
                 </li>
