#2.12 Chats Screen part 1

--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
     <title>Chat | Kakao Clone</title>
 </head>
 
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <!--status-bar는 부모-->
         <div class="status-bar__column">
