--- a/chat.html
+++ b/chat.html
@@ -52,17 +52,31 @@
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
-                <img src="images/avatar.jpg" class="m-avatar message__avatar">
+                <img src="images/avatar.jpg" class="m-avatar message__avatar" />
                 <div class="message__content">
                     <span class="message__bubble">
                         Congrats I love you!
                     </span>
                     <span class="message__author">Best Friend</span>
                 </div>
-                <span class="message__timestamp"></span>
             </li>
             <li class="sent-message message">
-                <span class="message__timestamp"></span>
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Thank you see you soon!
+                    </span>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="images/avatar.jpg" class="m-avatar message__avatar" />
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Congrats I love you!
+                    </span>
+                    <span class="message__author">Best Friend</span>
+                </div>
+            </li>
+            <li class="sent-message message">
                 <div class="message__content">
                     <span class="message__bubble">
                         Thank you see you soon!
