--- a/chat.html
+++ b/chat.html
@@ -14,40 +14,42 @@
 </head>
 
 <body class="chats-body">
-    <div class="status-bar">
-        <!--status-bar는 부모-->
-        <div class="status-bar__column">
-            <!--__column은 자식-->
-            <span class="status-bar__clock">13:54</span>
+    <div class="header-wrapper">
+        <div class="status-bar">
+            <!--status-bar는 부모-->
+            <div class="status-bar__column">
+                <!--__column은 자식-->
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <span class="status-bar__battery-level">100%</span>
+                <i class="fas fa-battery-full"></i>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100%</span>
-            <i class="fas fa-battery-full"></i>
-        </div>
+        <headers class="header">
+            <div class="header__header-column">
+                <a href="index.html" class="header__back-btn">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+                <h1 class="header__title">Best Friend</h1>
+                <!--대화상대 명-->
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon">
+                    <i class="fas fa-search"></i>
+                    <!--search 버튼-->
+                </span>
+                <span class="header__icon">
+                    <i class="fas fa-bars"></i>
+                    <!--hamburger 버튼-->
+                </span>
+            </div>
+        </headers>
     </div>
 
-    <headers class="header">
-        <div class="header__header-column">
-            <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left"></i>
-            </a>
-            <h1 class="header__title">Best Friend</h1>
-            <!--대화상대 명-->
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon">
-                <i class="fas fa-search"></i>
-                <!--search 버튼-->
-            </span>
-            <span class="header__icon">
-                <i class="fas fa-bars"></i>
-                <!--hamburger 버튼-->
-            </span>
-        </div>
-    </headers>
     <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
