#3.5 Screen Size Media Query

--- a/settings.html
+++ b/settings.html
@@ -86,6 +86,9 @@
             </ul>
         </section>
     </main>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small! 😱</span>
+    </div>
 </body>
 
 </html>
