--- a/chat.html
+++ b/chat.html
@@ -101,6 +101,9 @@
             </span>
         </div>
     </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small! 😱</span>
+    </div>
 </body>
 
 </html>
